src/test/deca/context/valid/cast-withNullObject.deca
class A {
}

{
    A a = null;
}