src/test/deca/context/invalid/method-voidParam.deca
class A{
	void a(void param) {}
}
